<resources>
    <string name="app_name">Student Progress</string>
    <string name="home_header">Student Progress App</string>
    <string name="name_question">Please Enter Your Name Below:</string>
    <string name="main_submit_button">Submit</string>
    <string name="welcome_text">Welcome, %s!</string>
    <string name="dashboard_default_status">You have no terms added. Click the plus to get started.</string>
    <string name="add_term_name"><u>Term Name</u></string>
    <string name="add_term_header"><u>Add Term</u></string>
    <string name="add_term">Add Term</string>
    <string name="start_date"><u>Start Date</u></string>
    <string name="end_date"><u>End Date</u></string>
    <string name="submit">Submit</string>
    <string name="courses"><u>Courses</u></string>
    <string name="add_course_button">Add Course</string>
    <string name="cancel">Cancel</string>
    <string name="add_course_header"><u>Add Course</u></string>
    <string name="course_name"><u>Course Name</u></string>
    <string name="assessments"><u>Assessments</u></string>
    <string name="add_assessment_button">Add Assessment</string>
    <string name="add_course">Add Course</string>
    <string name="instructors"><u>Instructors</u></string>
    <string name="add_instructor">Add Instructor</string>
    <string name="notes"><u>Notes</u></string>
    <string name="add_note">Add Note</string>
    <string name="status"><u>Status</u></string>
    <string name="assessment_header"><u>Assessment</u></string>
    <string name="assessment_type_sub"><u>Assessment Type</u></string>
    <string name="assessment_name"><u>Assessment Name</u></string>
    <string name="instructor"><u>Instructor</u></string>
    <string name="instructor_name"><u>Name</u></string>
    <string name="instructor_number"><u>Number</u></string>
    <string name="instructor_email"><u>Email</u></string>
    <string name="note_header"><u>Note</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back Button</string>
    <string name="temp">Temp</string>
    <string name="delete_term">Delete Term</string>
    <string name="enter_instructor_number_here">Enter instructor number here</string>
    <string name="enter_instructor_name_here">Enter instructor name here</string>
    <string name="enter_term_name_here">Enter term name here</string>
    <string name="enter_assessment_name_here">Enter assessment name here</string>
    <string name="assessment_name_input_line">Assessment name input line</string>
    <string name="enter_course_name_here">Enter course name here</string>
    <string name="delete_course">Delete Course</string>
    <string name="channel_name">StudentChannel</string>
    <string name="channel_description">Displays when a course or assessment is starting or ending</string>
</resources>